# ETLProjectOne

./: .gitignore  README.md  pyproject.toml
data/: README.md
metadata/: README.md
src/etl_project_package/: compare.py  kaggle_connect.py  main.py
tests/: test_auth.py  test_extract.py  test_kaggle.py  test_md5.py  test_versioning.py
