[tool.poetry]
name = "elt-projectone"
version = "0.1.0"
description = "NBA ETL Project"
authors = ["Donald Withespoon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
kaggle = "^1.8.3"
polars = "^1.37.0"
dotenv = "^0.9.9"
pendulum = "^3.1.0"
kagglehub = "^0.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.11"
alembic = "^1.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
